--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "./source/bot.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon ./source/bot.js"
+    "start": "nodemon ./source/bot.js",
+    "register": "node ./source/register.js"
   },
   "keywords": [],
   "author": "",
